# OpenFootprint

./: .editorconfig  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
docs/plans/: 2026-01-14-openfootprint-design.md  2026-01-14-openfootprint-mvp-implementation.md  2026-01-17-external-tool-integrations.md  2026-01-17-nameintel-design.md  2026-01-17-nameintel.md
runs/20260117T161934Z/: manifest.json  report.json  report.md
src/openfootprint/: cli.py
src/openfootprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openfootprint/core/: __init__.py  config.py  correlate.py  fetcher.py  inputs.py  pipeline.py  plan.py  schema.py
tests/: test_cli_help.py  test_cli_lookup.py  test_cli_nameintel.py  test_config.py  test_correlate.py  test_directory_sources.py  test_fetcher.py  test_inputs.py  test_integration.py  test_nameintel_crosslinked.py  test_nameintel_dorks.py  test_nameintel_permutations.py  test_nameintel_serpapi.py  test_nameintel_sherlock_validate.py  test_nameintel_smoke.py  test_parsers.py  test_pipeline.py  test_pipeline_tools.py  test_plan.py  test_profile_sources.py  test_rate_limit.py  test_reporting.py  test_robots.py  test_run_outputs.py  test_runs.py  test_schema.py  test_sources_registry.py  test_tool_maigret.py  test_tool_sherlock.py  test_tool_subprocess.py  test_tool_whatsmyname.py  test_version.py  test_whatsmyname_runner.py
tests/fixtures/: github.html  maigret_simple.json  openalex.json  orcid.json  reddit.html  sherlock.csv  whatsmyname_data.json  whatsmyname_report.json  wikidata.json
(+43 files in other folders)
